# rocket-api-example

./: Cargo.toml  Dockerfile  README.md
script/: docker-build  docker-run  project-run  project-setup
src/: main.rs
