# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "rocket-eg-1"
version = "0.1.0"
edition = "2021"

[dependencies]
#rocket_okapi = "0.3.6"
#schemars = "0.6"
#okapi = { version = "0.3", features = ["derive_json_schema"] }

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rocket_okapi = "0.5.1"
schemars = "0.8.8"
okapi = { version = "0.4.0", features = ["derive_json_schema"] }

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["json"]
