# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "rocket-eg-1"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"] }
rocket_okapi = { version = "0.8.0-alpha-1", features = ["swagger", "rapidoc"] }
serde = "1.0"
serde_json = "1.0"
okapi = { version = "0.4.0", features = ["derive_json_schema"] }
